fix: bootstrap carousel alignment

--- a/app/bim.less
+++ b/app/bim.less
@@ -281,6 +281,9 @@
   padding-left: 1em;
 }
 
+/// Bootstrap Hacks ///
+.carousel-inner>.item>img, .carousel-inner>.item>a>img { margin: 0 auto; }
+
 /// Old Bulletin Style ///
 .category-bulletin {
   .entry-content { font-size: 14px; }
